apps/homarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  labels:
    app: homarr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
      annotations:
        homelab.dev/rollout-nonce: "2025-11-02-01"
    spec:
      containers:
        - name: homarr
          image: ghcr.io/ajnart/homarr@sha256:e103abadfb527186af5b4bd43df4eff7c67afa5cd4df8e65fa97910c8840b2a9
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7575
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - name: homarr-data
              mountPath: /app/data/configs
              subPath: configs
            - name: homarr-data
              mountPath: /app/public/icons
              subPath: icons
            - name: homarr-data
              mountPath: /data
              subPath: data
      volumes:
        - name: homarr-data
          persistentVolumeClaim:
            claimName: homarr-data
