apps/homarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  labels:
    app: homarr
spec:
  selector:
    app: homarr
  ports:
    - name: http
      port: 80
      targetPort: 7575
