apps/homarr/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
spec:
  ingressClassName: nginx
  rules:
    - host: homarr.jamaguchi.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  name: http
